# python-tasks-seed

./: README.md  pyproject.toml
.github/actions/setup-python-env/: action.yaml
.github/workflows/: lint-typecheck.yml  tests.yml
00.Demo/: calculator.py  example_test.py  integration.py  integration_test.sh  mean.py  mean_test.py
01.InplaceSorting/: sorting_demo.py  sorting_test.py  sortings.py
01.InplaceSorting.c/: counting_container.py  sortings.py
01.InplaceSorting.s/: comp_swap_container.py  comp_swap_list_test.py  integration_test.sh  sorting_demo.py  sorting_test.py  sortings.py
02.Base85/: base85  base85_test.py  base85ed.py
