[project]
name = "Algs_and_Data_Structures_Assignments"
version = "0.1.0"
description = "It is clear =)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "mypy>=1.9.0",
    "pylint>=3.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "beartype>=0.18.0",
]
